Bug 1989285 - Ensure visited links use correct color in dark mode. r=mkmelin,laurel,arschmitz
Differential Revision: https://phabricator.services.mozilla.com/D267298

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/messageBody.css
+++ b/mail/themes/shared/mail/messageBody.css
@@ -244,7 +244,10 @@ img {
 /* ::::: links ::::: */
 /* stylelint-disable-next-line media-query-no-invalid */
 @media (prefers-color-scheme: dark) and -moz-pref("mail.dark-reader.enabled") {
-  a {
+  a:link {
     color: LinkText;
+  }
+  a:visited {
+    color: VisitedText;
   }
 }
